@@ -1,3 +1,8 @@
+2006-01-27  Roger Leigh  <rleigh@debian.org>
+
+	* schroot/sbuild-auth-conv-tty.cc: Move static data and functions
+	into the unnamed namespace.
+
 2006-01-26  Roger Leigh  <rleigh@debian.org>
 
 	* schroot/schroot.cc (main): Only allow preservation of the user
